--- a/Task 5/Web/Views/Database/Edit.cshtml
+++ b/Task 5/Web/Views/Database/Edit.cshtml
@@ -18,7 +18,7 @@
         @Html.HiddenFor(model => model.Id)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ManagerModel.LastName, htmlAttributes: new {@class = "control-label col-md-2"})
+            @Html.Label("Manager Name", htmlAttributes: new {@class = "control-label col-md-2"})
             <div class="col-md-10">
                 @Html.EditorFor(model => model.ManagerModel.LastName, new {htmlAttributes = new {@class = "form-control"}})
                 @Html.ValidationMessageFor(model => model.ManagerModel.LastName, "", new {@class = "text-danger"})
@@ -26,7 +26,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ClientModel.Name, htmlAttributes: new {@class = "control-label col-md-2"})
+            @Html.Label("Client Name", htmlAttributes: new {@class = "control-label col-md-2"})
             <div class="col-md-10">
                 @Html.EditorFor(model => model.ClientModel.Name, new {htmlAttributes = new {@class = "form-control"}})
                 @Html.ValidationMessageFor(model => model.ClientModel.Name, "", new {@class = "text-danger"})
@@ -34,10 +34,26 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ProductModel.Name, htmlAttributes: new {@class = "control-label col-md-2"})
+            @Html.Label("Product Name", htmlAttributes: new {@class = "control-label col-md-2"})
             <div class="col-md-10">
                 @Html.EditorFor(model => model.ProductModel.Name, new {htmlAttributes = new {@class = "form-control"}})
                 @Html.ValidationMessageFor(model => model.ProductModel.Name, "", new {@class = "text-danger"})
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.ProductModel.Price, htmlAttributes: new {@class = "control-label col-md-2"})
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.ProductModel.Price, new {htmlAttributes = new {@class = "form-control"}})
+                @Html.ValidationMessageFor(model => model.ProductModel.Price, "", new {@class = "text-danger"})
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.Label("Date", htmlAttributes: new {@class = "control-label col-md-2"})
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.DateOfSale, new {htmlAttributes = new {@class = "form-control"}})
+                @Html.ValidationMessageFor(model => model.DateOfSale, "", new {@class = "text-danger"})
             </div>
         </div>
 
