--- a/Task 5/Web/Views/Database/Create.cshtml
+++ b/Task 5/Web/Views/Database/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Model.SaleModel
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Create";
 }
 
 <h2>Edit</h2>
@@ -41,7 +41,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ProductModel.Price, htmlAttributes: new {@class = "control-label col-md-2"})
+            @Html.Label("Price", htmlAttributes: new {@class = "control-label col-md-2"})
             <div class="col-md-10">
                 @Html.EditorFor(model => model.ProductModel.Price, new {htmlAttributes = new {@class = "form-control"}})
                 @Html.ValidationMessageFor(model => model.ProductModel.Price, "", new {@class = "text-danger"})
