--- a/Task 5/Web/Views/Database/Index.cshtml
+++ b/Task 5/Web/Views/Database/Index.cshtml
@@ -7,6 +7,13 @@
 
 <div class="row">
     <div class="col-md-8">
+        <form method="get">
+            <div class="form-inline">
+                <label class="control-label">Manager name: </label>
+                @Html.TextBox("Name")
+                <input type="submit" value="Фильтр" class="btn btn-default" />
+            </div>
+        </form>
         <table class="table table-bordered text-center">
             <tr>
                 <th class="text-center">
@@ -53,8 +60,6 @@
                 </tr>
             }
         </table>
-        <div class="col-md-offset-2 col-md-10, btn-default">
-            @Html.ActionLink("Create", "Create")
-        </div>
+        @Html.ActionLink("Create", "Create")
     </div>
 </div>
