--- a/Task 5/Web/Views/Database/Index.cshtml
+++ b/Task 5/Web/Views/Database/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IList<Model.SaleModel>
+﻿@using PagedList.Mvc
+@model PagedList.IPagedList<Model.SaleModel>
 @{
     ViewBag.Title = "DataBase";
 }
@@ -9,11 +10,38 @@
     <div class="col-md-8">
         <form method="get">
             <div class="form-inline">
-                <label class="control-label">Manager name: </label>
-                @Html.TextBox("Name")
-                <input type="submit" value="Фильтр" class="btn btn-default" />
+                <table class="table text-center">
+                    <tr>
+                        <th>
+                            <label class="control-label">Manager name</label>
+                        </th>
+                        <th>
+                            <label class="control-label">From date</label>
+                        </th>
+                        <th>
+                            <label class="control-label">To date</label>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>
+                            @Html.TextBox("name")
+                        </th>
+                        <th>
+                            <input type="date" name="fromDate">
+                        </th>
+                        <th>
+                            <input type="date" name="toDate">
+                        </th>
+                        <th>
+                            <input type="submit" value="Фильтр" class="btn btn-default"/>
+                        </th>
+                    </tr>
+                </table>
+
             </div>
         </form>
+        @Html.ActionLink("Create", "Create")
+
         <table class="table table-bordered text-center">
             <tr>
                 <th class="text-center">
@@ -34,7 +62,6 @@
                 <th class="text-center">
                 </th>
             </tr>
-
             @foreach (var item in Model)
             {
                 <tr>
@@ -60,6 +87,9 @@
                 </tr>
             }
         </table>
-        @Html.ActionLink("Create", "Create")
+        <br/>
+        Страница @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) из @Model.PageCount
+
+        @Html.PagedListPager(Model, page => Url.Action("Index", new {page}))
     </div>
 </div>
