--- a/Task 5/Web/Views/Manage/Index.cshtml
+++ b/Task 5/Web/Views/Manage/Index.cshtml
@@ -39,8 +39,8 @@
         @*  
             <dt>Номер телефона:</dt>
             <dd>
-                @(Model.PhoneNumber ?? "None")
-                @if (Model.PhoneNumber != null)
+                @(Task5_Model.PhoneNumber ?? "None")
+                @if (Task5_Model.PhoneNumber != null)
                 {
                     <br />
                     <text>[&nbsp;&nbsp;@Html.ActionLink("Change", "AddPhoneNumber")&nbsp;&nbsp;]</text>
@@ -62,7 +62,7 @@
                 Поставщики двухфакторной проверки подлинности не настроены. В <a href="https://go.microsoft.com/fwlink/?LinkId=403804">этой статье</a>
                 можно узнать, как настроить двухфакторную проверку подлинности для этого приложения ASP.NET.
             </p>
-            @*@if (Model.TwoFactor)
+            @*@if (Task5_Model.TwoFactor)
                 {
                     using (Html.BeginForm("DisableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                     {
