--- a/Task 5/Web/Views/Sale/Edit.cshtml
+++ b/Task 5/Web/Views/Sale/Edit.cshtml
@@ -52,7 +52,7 @@
         <div class="form-group">
             @Html.Label("Date", htmlAttributes: new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DateOfSale, new {htmlAttributes = new {@class = "form-control"}})
+                @Html.TextBoxFor(model => model.DateOfSale, new {@class = "form-control datepicker"})
                 @Html.ValidationMessageFor(model => model.DateOfSale, "", new {@class = "text-danger"})
             </div>
         </div>
