--- a/Task 5/Web/Views/Shared/_Layout.cshtml
+++ b/Task 5/Web/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("База данных", "Index", "Database")</li>
+                    <li>@Html.ActionLink("База данных", "Index", "Sale")</li>
                     <li>@Html.ActionLink("Информация", "About", "Home")</li>
                     <li>@Html.ActionLink("Связаться", "Contact", "Home")</li>
                 </ul>
