--- a/Task 5/Web/Views/Sale/Index.cshtml
+++ b/Task 5/Web/Views/Sale/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using PagedList.Mvc
-@model PagedList.IPagedList<Model.SaleModel>
+@model PagedList.IPagedList<Task5_Model.SaleModel>
 @{
     ViewBag.Title = "DataBase";
 }
